added 'showcase', re-compiled css assets

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9998,5 +9998,10 @@ a.text-dark:focus {
   background-color: #fff;
   -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
           box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+  margin-bottom: 20px;
+}
+
+.navbar {
+  margin-bottom: 30px;
 }
 
