--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,7 +8,12 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// this is one way to add custom styles to compiled stylesheet
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+  margin-bottom: 20px;
 }
+
+// this is another way to add custom styles to compiled stylesheet
+@import "custom";
