--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,6 +8,9 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// Font-Awesome
+@import "~font-awesome/scss/font-awesome.scss";
+
 // this is one way to add custom styles to compiled stylesheet
 .navbar-laravel {
   background-color: #fff;
