implemented Organisation search with Algolia

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13083,3 +13083,13 @@ a.text-dark:focus {
   }
 }
 
+.form-control-sm,
+.input-group-sm > .form-control,
+.input-group-sm > .input-group-prepend > .input-group-text,
+.input-group-sm > .input-group-append > .input-group-text,
+.input-group-sm > .input-group-prepend > .btn,
+.input-group-sm > .input-group-append > .btn {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
