moved conf msg styles into _custom and recompiled

--- a/resources/assets/sass/_custom.scss
+++ b/resources/assets/sass/_custom.scss
@@ -28,3 +28,33 @@
 .form-control-sm {
     box-shadow: none;
 }
+
+// styles for search form, including icon to clear search
+.hidden {
+    display: none;
+}
+.search-container {
+    display: inline-block;
+    position: relative;
+}
+.form-control-clear {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 12px;
+    color: lightgrey;
+    z-index: 10;
+    pointer-events: auto;
+    cursor: pointer;
+}
+.search-input {
+    box-shadow: none;
+}
+
+// styles for confirmation messages including dismiss icon
+.closeDiv {
+    cursor: pointer;
+    float: right;
+    opacity: 0.5;
+    margin-top: 6px; // not the right way to do this
+}
